<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">AvMooViewer</string>
    <string name="all_vid">All</string>
    <string name="load_failed">Load Failed!</string>
    <string name="actress">Actress</string>
    <string name="categoryURL">Category</string>
    <string name="no_more">No More!</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="date">Date:</string>
    <string name="refresh">Refresh</string>
    <string name="preview">Preview</string>
    <string name="load_finished">Load finished</string>
    <string name="collections">Collections</string>
    <string name="search_for">Search for:</string>
    <string name="home">Home</string>
    <string name="failed">Failed</string>
    <string name="small_av_cover_image">small av cover image</string>
    <string name="actress_header">Actress header</string>
    <string name="big_av_cover_image">Big av cover image</string>
    <string name="click_reload">Click to reload</string>
    <string name="load_failed_click_to_retry">Load failed!\nClick retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result">No Result</string>
</resources>
