<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_category"
            android:icon="@drawable/category"
            android:title="@string/category" />
        <item
            android:id="@+id/menu_actress"
            android:icon="@drawable/woman"
            android:title="@string/actress" />
        <item
            android:id="@+id/menu_collections"
            android:icon="@drawable/collections"
            android:title="@string/collections" />
    </group>
</menu>